FCRM-5692 added css to correct nfo panel colours in dark mode

--- a/client/sass-flood-map/main.scss
+++ b/client/sass-flood-map/main.scss
@@ -140,3 +140,8 @@ body.js-enabled:not([data-fm-error]) {
       }
   }
 }
+
+.govuk-heading-s,
+.govuk-details__text {
+  color: var(--foreground-colour);
+}
